--- a/app/src/main/res/layout/activity_trip_log.xml
+++ b/app/src/main/res/layout/activity_trip_log.xml
@@ -15,13 +15,13 @@
         android:textStyle="bold"
         android:layout_gravity="center_horizontal"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/list_view_trip_history"
+        app:layout_constraintBottom_toTopOf="@id/recycler_view_trip_history"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
 
-    <ListView
-        android:id="@+id/list_view_trip_history"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_trip_history"
         android:layout_width="match_parent"
         android:layout_height="400dp"
         app:layout_constraintBottom_toTopOf="@id/divider"
@@ -30,7 +30,7 @@
         app:layout_constraintTop_toBottomOf="@id/title">
 
 
-    </ListView>
+    </androidx.recyclerview.widget.RecyclerView>
 
     <View
         android:id="@+id/divider"
@@ -40,7 +40,7 @@
         android:layout_marginBottom="20dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintBottom_toTopOf="@+id/linear_layout_log"
-        app:layout_constraintTop_toBottomOf="@+id/list_view_trip_history"
+        app:layout_constraintTop_toBottomOf="@+id/recycler_view_trip_history"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
