--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/sensors"
+            android:textSize="20sp"
             android:textAlignment="center" />
 
         <TextView
@@ -28,6 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:textStyle="bold"
             android:text="@string/accelerometer" />
 
         <LinearLayout
@@ -105,6 +107,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="36dp"
+            android:textStyle="bold"
             android:text="@string/gyroscope" />
 
         <LinearLayout
@@ -181,6 +184,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="36dp"
+            android:textStyle="bold"
             android:text="@string/magnetometer" />
 
         <LinearLayout
@@ -341,22 +345,32 @@
         android:id="@+id/button_start_stop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="80dp"
         android:text="@string/start"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
-    <!--<EditText
-        android:id="@+id/trip_time"
+    <TextView
+        android:id="@+id/text_frequency"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:text="@string/frequency"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/trip_frecuency"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/trip_frecuency"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="time"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_start_stop" />-->
+        app:layout_constraintBottom_toTopOf="@+id/button_start_stop" />
+
     <TextView
         android:id="@+id/trip_history"
         android:layout_width="wrap_content"
