--- a/app/src/main/res/layout/activity_trip_log.xml
+++ b/app/src/main/res/layout/activity_trip_log.xml
@@ -175,5 +175,15 @@
             android:text="@string/send_trip_data" />
     </LinearLayout>
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/divider"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/divider_title" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
