--- a/app/src/main/res/layout/activity_trip_log.xml
+++ b/app/src/main/res/layout/activity_trip_log.xml
@@ -94,37 +94,40 @@
             android:id="@+id/row_log_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_horizontal">
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/column_title_1"
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:text="@string/id_vehicle"
+                android:layout_gravity="center"
                 android:gravity="center"
-                android:layout_gravity="center"/>
+                android:text="@string/id_vehicle" />
+
             <TextView
                 android:id="@+id/column_title_2"
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
-                android:text="@string/data_captured"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:text="@string/data_captured" />
+
             <TextView
                 android:id="@+id/column_title_3"
                 android:layout_width="85dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
-                android:text="@string/near_crashes_register"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:text="@string/near_crashes_register" />
+
             <TextView
                 android:id="@+id/column_title_4"
                 android:layout_width="85dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
-                android:text="@string/mean_frequency"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:text="@string/mean_frequency" />
 
 
         </LinearLayout>
@@ -167,12 +170,47 @@
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/button_send_data"
-            android:layout_marginTop="20dp"
+        <LinearLayout
+            android:id="@+id/row_log_title_2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/column_title_5"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:text="@string/id_route" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/row_log_info_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/column_value_5"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/value" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/button_send_data"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="@string/send_trip_data" />
+
     </LinearLayout>
 
     <ProgressBar
