UPDT: best UI and trip date in 24 hours format

--- a/app/src/main/res/layout/item_trip.xml
+++ b/app/src/main/res/layout/item_trip.xml
@@ -8,6 +8,9 @@
     app:cardElevation="5dp"
     android:clickable="true"
     android:focusable="true"
+    android:layout_marginBottom="1dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
     android:foreground="?android:attr/selectableItemBackground"
     android:background="?android:attr/selectableItemBackground">
 
