--- a/app/src/main/res/layout/activity_trip_log.xml
+++ b/app/src/main/res/layout/activity_trip_log.xml
@@ -12,10 +12,10 @@
         android:layout_height="wrap_content"
         android:text="@string/trip_history"
         android:textSize="24sp"
+        android:layout_marginTop="16dp"
         android:textStyle="bold"
         android:layout_gravity="center_horizontal"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/id_trip_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -72,7 +72,7 @@
         android:id="@+id/divider"
         android:layout_width="wrap_content"
         android:layout_height="2dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintBottom_toTopOf="@+id/linear_layout_log"
         app:layout_constraintTop_toBottomOf="@+id/recycler_view_trip_history"
@@ -89,26 +89,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/divider">
 
+        <TextView
+            android:id="@+id/title_additional_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/additional_info"
+            android:textSize="20sp"
+            android:textColor="@color/design_default_color_primary"
+            android:textAlignment="center"/>
 
         <LinearLayout
             android:id="@+id/row_log_title"
             android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/column_title_1"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="@string/id_vehicle"
-                android:textStyle="bold" />
-
-            <TextView
                 android:id="@+id/column_title_2"
-                android:layout_width="80dp"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:gravity="center"
@@ -117,7 +117,7 @@
 
             <TextView
                 android:id="@+id/column_title_3"
-                android:layout_width="86dp"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:gravity="center"
@@ -126,7 +126,7 @@
 
             <TextView
                 android:id="@+id/column_title_4"
-                android:layout_width="85dp"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:gravity="center"
@@ -145,14 +145,8 @@
             android:gravity="center">
 
             <TextView
-                android:id="@+id/column_value_1"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:text="@string/value_number"
-                android:gravity="center"/>
-            <TextView
                 android:id="@+id/column_value_2"
-                android:layout_width="80dp"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:text="@string/value_number"
@@ -160,14 +154,14 @@
 
             <TextView
                 android:id="@+id/column_value_3"
-                android:layout_width="86dp"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:gravity="center"
                 android:text="@string/value_number" />
             <TextView
                 android:id="@+id/column_value_4"
-                android:layout_width="85dp"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:text="@string/value_number"
@@ -182,6 +176,16 @@
             android:layout_marginTop="16dp"
             android:gravity="center_horizontal"
             android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/column_title_1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="@string/id_vehicle"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/column_title_5"
@@ -200,6 +204,14 @@
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/column_value_1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/value_number"
+                android:gravity="center"/>
 
             <TextView
                 android:id="@+id/column_value_5"
